--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button id="btn-clear">xóa</button>
         <input id="size" type="text" value="2" onchange="changeSize()">
         <input type="color" class="color-picker">
-        <canvas id="myCanvas" width="600" height="600" style="border:1px solid #000000;"></canvas>
+        <canvas id="myCanvas" width="600" height="600" style="border:1px solid #9999; margin-bottom: 100px;"></canvas>
     </div>
    
 </body>
